--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Chief Cook</title>
+    <title>El Brasero</title>
 
     <link rel="stylesheet" href="vendor/uikit/css/uikit.min.css">
     <link rel="stylesheet" href="vendor/uikit/css/components/slidenav.min.css">
@@ -42,12 +42,25 @@
 
     <nav class="eb-navbar uk-navbar uk-flex uk-flex-center" data-uk-sticky="{ showup: true, animation: 'uk-animation-slide-top' }">
       <ul class="uk-navbar-nav">
-        <li class="uk-active"><a href="inicio.html">inicio</a></li>
-        <li><a href="nosotros.html">nosotros</a></li>
-        <li><a href="platos.html">platos</a></li>
-        <li><a href="contacto.html">contacto</a></li>
+        <li class="uk-active"><a href="inicio.html">Inicio</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="platos.html">Platos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
+      <div class="uk-navbar-brand uk-navbar-center uk-visible-small">El Brasero</div>
+      <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas="{mode:'slide'}"></a>
     </nav>
+
+    <div id="offcanvas" class="uk-offcanvas">
+      <div class="uk-offcanvas-bar uk-offcanvas-bar-flip">
+        <ul class="uk-nav uk-nav-offcanvas">
+          <li class="uk-active"><a href="index.html">Inicio</a></li>
+          <li><a href="nosotros.html">Notros</a></li>
+          <li><a href="platos.html">Platos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
 
     <section class="uk-block uk-block-muted">
       <div class="uk-container uk-container-center uk-text-center">
