--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="vendor/uikit/css/components/sticky.min.css">
 
     <link rel="stylesheet" href="assets/css/master.css">
+    <link rel="stylesheet" href="assets/css/colors.css">
 
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/uikit/js/uikit.min.js"></script>
@@ -68,6 +69,9 @@
         <p class="uk-text-large uk-text-muted uk-text-slim">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <div class="uk-text-center">
+          <a href="nosotros.html" class="uk-button-large button">VER MÁS</a>
+        </div>
       </div>
     </section>
 
@@ -76,6 +80,7 @@
       <div class="uk-container uk-container-center">
         <div class="uk-grid uk-grid-width-small-1-3" data-uk-grid-margin>
           <div>
+            <div class="border-red-top"></div>
             <h2 class="uk-h1">Parrillas</h2>
             <img src="assets/images/home/img1.jpg" alt="">
             <p>
@@ -84,9 +89,10 @@
             <p class="uk-text-muted">
               Fratione uptate mseesciun neque porroisqm estrem equia dolorer ntreterase geryiuyasa miertase. Derit ame kersed quia non numquam kertyrasas.
             </p>
-            <a href="platos.html" class="uk-button uk-button-primary uk-button-large">VER MÁS</a>
+            <a href="platos.html" class="button button-red uk-button-large">VER MÁS</a>
           </div>
           <div>
+            <div class="border-yellow-top"></div>
             <h2 class="uk-h1">Ensaladas populares</h2>
             <img src="assets/images/home/img2.jpg" alt="">
             <p>
@@ -95,9 +101,10 @@
             <p class="uk-text-muted">
               Sius modi tempora incidunt, ut labore et dolore magn am aliquam quaerat voluptatem. ut enim ad minima ven iam, quis nostrum exercitationem.
             </p>
-            <a href="platos.html" class="uk-button uk-button-primary uk-button-large">VER MÁS</a>
+            <a href="platos.html" class="button button-yellow uk-button-large">VER MÁS</a>
           </div>
           <div>
+            <div class="border-green-top"></div>
             <h2 class="uk-h1">Platos frescos</h2>
             <img src="assets/images/home/img3.jpg" alt="">
             <p>
@@ -106,7 +113,7 @@
             <p class="uk-text-muted">
               Nullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis autem vel eum iures reprehenderit, qui in ea voluptate velit.
             </p>
-            <a href="platos.html" class="uk-button uk-button-primary uk-button-large">VER MÁS</a>
+            <a href="platos.html" class="button button-green uk-button-large">VER MÁS</a>
           </div>
         </div>
       </div>
