--- a/index.html
+++ b/index.html
@@ -170,8 +170,23 @@
 
     <div class="uk-block uk-block-large">
       <div class="uk-container uk-container-center">
-        <div class="uk-grid uk-width-medium-1-3" data-uk-grid-margin>
-
+        <div class="uk-flex uk-flex-space-around uk-flex-wrap">
+          <div class="uk-margin-large-bottom uk-container">
+            <a href="inicio.html">
+              <h4 class="uk-h1">El Brasero</h4>
+              <h4>&copy; 2016</h4>
+            </a>
+          </div>
+          <div class="uk-margin-large-bottom uk-container">
+                <a class="uk-icon-button uk-icon-hover uk-icon-facebook uk-margin-small-right" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
+                <a class="uk-icon-button uk-icon-hover uk-icon-twitter uk-margin-small-right" href=""></a>
+                <a class="uk-icon-button uk-icon-hover uk-icon-google-plus uk-margin-small-right" href=""></a>
+                <a class="uk-icon-button uk-icon-hover uk-icon-pinterest-p uk-margin-small-right" href=""></a>
+                <a class="uk-icon-button uk-icon-hover uk-icon-instagram uk-margin-small-right" href=""></a>
+          </div>
+          <div class="uk-margin-large-bottom uk-container">
+            <h3>Av. Venezuela 718 Breña <br> (1/2 cda. Metro Alfonso Ugarte) <br> Lima</h3>
+          </div>
         </div>
       </div>
     </div>
