--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><img src="assets/images/home/slide3.jpg" alt=""></li>
       </ul>
       <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle">
-        <h1 class="uk-text-xlarge uk-text-contrast text-krona">EL BRASERO</h1>
+        <h1 class="uk-text-xlarge uk-text-contrast text-krona uk-text-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">EL BRASERO</h1>
       </div>
       <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slideshow-item="previous"></a>
       <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-next" data-uk-slideshow-item="next"></a>
@@ -42,7 +42,7 @@
       </ul>
     </div>
 
-    <nav class="eb-navbar uk-navbar uk-flex uk-flex-center" data-uk-sticky="{ top: -100, showup: false, animation: 'uk-animation-slide-top', clsactive: 'eb-navbar-active' }">
+    <nav class="eb-navbar uk-navbar uk-flex uk-flex-center" data-uk-sticky="{ showup: true, animation: 'uk-animation-slide-top', clsactive: 'eb-navbar-active' }">
       <ul class="uk-navbar-nav">
         <li class="uk-visible-small"><a href="#offcanvas" data-uk-offcanvas="{mode:'slide'}">menu</a></li>
         <li class="uk-hidden-small uk-active"><a href="inicio.html">inicio</a></li>
@@ -64,7 +64,7 @@
     </div>
 
     <section class="uk-block uk-block-muted">
-      <div class="uk-container uk-container-center uk-text-center">
+      <div class="uk-container uk-container-center uk-text-center" data-uk-scrollspy="{ cls: 'uk-animation-fade' }">
         <h3 class="uk-heading-large text-krona">¡A COMER!</h3>
         <p class="uk-text-large uk-text-muted uk-text-slim uk-margin-large-bottom">
           Beciegast nveriti vitaesaert asety kertya aset aplicaboserde nerafae lorem ipsumoditaut. Monsequuntu kerliurase bertasasda buyra sasevar magni dolores eonqui ratione voluptate msequi nesciunt, neque porro quisquamesa dolore nuyfasasertas. Vertyu erauas aitaesa ertyasneo eniptaia desbuays.
@@ -78,41 +78,47 @@
 
     <section class="uk-block">
       <div class="uk-container uk-container-center">
-        <div class="uk-grid uk-grid-width-small-1-3" data-uk-grid-margin>
+        <div class="uk-grid uk-grid-width-small-1-2 uk-grid-width-medium-1-3 uk-flex-center" data-uk-grid-margin data-uk-grid-match="{ target: '.details' }">
           <div>
             <div class="border-red-top"></div>
-            <h2 class="uk-h1">Menú parrillas</h2>
+            <h2 class="uk-h1">Parrillas</h2>
             <img src="assets/images/home/img1.jpg" alt="">
-            <p>
-              Seius modi tempora incidunut labore et dolore.
-            </p>
-            <p class="uk-text-muted">
-              Fratione uptate mseesciun neque porroisqm estrem equia dolorer ntreterase geryiuyasa miertase. Derit ame kersed quia non numquam kertyrasas.
-            </p>
+            <div class="details uk-margin-top">
+              <p>
+                Seius modi tempora incidunut labore et dolore.
+              </p>
+              <p class="uk-text-muted">
+                Fratione uptate mseesciun neque porroisqm estrem equia dolorer ntreterase geryiuyasa miertase. Derit ame kersed quia non numquam kertyrasas.
+              </p>
+            </div>
             <a href="platos.html" class="button button-red uk-button-large">VER MÁS</a>
           </div>
           <div>
             <div class="border-yellow-top"></div>
-            <h2 class="uk-h1">Ensaladas populares</h2>
+            <h2 class="uk-h1">Ensaladas</h2>
             <img src="assets/images/home/img2.jpg" alt="">
-            <p>
-              Decidunut aliquam quaerat voluptatem.
-            </p>
-            <p class="uk-text-muted">
-              Sius modi tempora incidunt, ut labore et dolore magn am aliquam quaerat voluptatem. ut enim ad minima ven iam, quis nostrum exercitationem.
-            </p>
+            <div class="details uk-margin-top">
+              <p>
+                Decidunut aliquam quaerat voluptatem.
+              </p>
+              <p class="uk-text-muted">
+                Sius modi tempora incidunt, ut labore et dolore magn am aliquam quaerat voluptatem. ut enim ad minima ven iam, quis nostrum exercitationem.
+              </p>
+            </div>
             <a href="platos.html" class="button button-yellow uk-button-large">VER MÁS</a>
           </div>
           <div>
             <div class="border-green-top"></div>
-            <h2 class="uk-h1">Platos frescos</h2>
+            <h2 class="uk-h1">Frutas</h2>
             <img src="assets/images/home/img3.jpg" alt="">
-            <p>
-              Seius modi tempora incidunut labore et dolore.
-            </p>
-            <p class="uk-text-muted">
-              Nullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis autem vel eum iures reprehenderit, qui in ea voluptate velit.
-            </p>
+            <div class="details uk-margin-top">
+              <p>
+                Seius modi tempora incidunut labore et dolore.
+              </p>
+              <p class="uk-text-muted">
+                Nullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis autem vel eum iures reprehenderit, qui in ea voluptate velit.
+              </p>
+            </div>
             <a href="platos.html" class="button button-green uk-button-large">VER MÁS</a>
           </div>
         </div>
@@ -140,7 +146,7 @@
     <section class="uk-block uk-block-muted">
       <div class="uk-container uk-container-center uk-text-center">
         <div class="uk-grid uk-grid-width-medium-1-2" data-uk-grid-margin>
-          <div>
+          <div data-uk-scrollspy="{ cls: 'uk-animation-slide-left' }">
             <div class="uk-grid" data-uk-grid-margin>
               <div class="uk-width-small-1-3 uk-text-center uk-flex-order-last-large">
                 <img src="assets/images/home/img4.jpg" class="uk-border-circle" alt="">
@@ -154,7 +160,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div data-uk-scrollspy="{ cls: 'uk-animation-slide-right' }">
             <div class="uk-grid" data-uk-grid-margin>
               <div class="uk-width-small-1-3 uk-text-center uk-flex-order-last-large">
                 <img src="assets/images/home/img5.jpg" class="uk-border-circle" alt="">
@@ -184,25 +190,32 @@
 
 
     <div class="uk-block uk-block-large">
-      <div class="uk-container uk-container-center">
+      <div class="uk-container uk-container-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
         <div class="uk-flex uk-flex-space-around uk-flex-wrap">
-          <div class="uk-margin-large-bottom uk-container uk-text-center">
-            <h4 class="uk-h1 text-krona"><a class="uk-link-reset" href="inicio.html">EL BRASERO</a></h4>
-            <h4>&copy; 2016</h4>
+          <div class="uk-margin-bottom uk-container uk-text-center">
+            <h4 class="uk-h1 uk-margin-small-bottom text-krona"><a class="uk-link-reset" href="inicio.html">EL BRASERO</a></h4>
+            <h4 class="uk-margin-small-top">&copy; 2016</h4>
           </div>
-          <div class="uk-margin-large-bottom uk-container">
-                <a class="uk-icon-button uk-icon-hover uk-icon-facebook uk-margin-small-right" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
-                <a class="uk-icon-button uk-icon-hover uk-icon-twitter uk-margin-small-right" href=""></a>
-                <a class="uk-icon-button uk-icon-hover uk-icon-google-plus uk-margin-small-right" href=""></a>
-                <a class="uk-icon-button uk-icon-hover uk-icon-pinterest-p uk-margin-small-right" href=""></a>
-                <a class="uk-icon-button uk-icon-hover uk-icon-instagram uk-margin-small-right" href=""></a>
+          <div class="uk-margin-bottom uk-container">
+            <a class="uk-icon-button uk-icon-hover uk-icon-facebook uk-margin-small-right" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
+            <a class="uk-icon-button uk-icon-hover uk-icon-twitter uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-hover uk-icon-google-plus uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-hover uk-icon-pinterest-p uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-hover uk-icon-instagram uk-margin-small-right" href=""></a>
           </div>
-          <div class="uk-margin-large-bottom uk-container">
-            <h3>Av. Venezuela 718 Breña <br> (1/2 cda. Metro Alfonso Ugarte) <br> Lima</h3>
+          <div class="uk-margin-bottom uk-container uk-text-slim">
+            <p class="uk-text-muted uk-h2">
+              <span>Av. Venezuela 718 </span><br>
+              <span>Breña </span><br>
+              <span class="uk-h3">A media cuadra de Metro</span>
+            </p>
+            <p class="uk-h3">informes@elbrasero.com</p>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="uk-block uk-block-secondary uk-padding-top-remove"></div>
 
   </body>
 </html>
