Added font local

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>El Brasero</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Krona+One">
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="vendor/uikit/css/uikit.min.css">
     <link rel="stylesheet" href="vendor/uikit/css/components/slidenav.min.css">
     <link rel="stylesheet" href="vendor/uikit/css/components/dotnav.min.css">
@@ -189,19 +189,19 @@
     </section>
 
 
-    <div class="uk-block uk-block-large">
+    <div class="uk-block">
       <div class="uk-container uk-container-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
         <div class="uk-flex uk-flex-space-around uk-flex-wrap">
           <div class="uk-margin-bottom uk-container uk-text-center">
             <h4 class="uk-h1 uk-margin-small-bottom text-krona"><a class="uk-link-reset" href="inicio.html">EL BRASERO</a></h4>
             <h4 class="uk-margin-small-top">&copy; 2016</h4>
           </div>
-          <div class="uk-margin-bottom uk-container">
-            <a class="uk-icon-button uk-icon-hover uk-icon-facebook uk-margin-small-right" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
-            <a class="uk-icon-button uk-icon-hover uk-icon-twitter uk-margin-small-right" href=""></a>
-            <a class="uk-icon-button uk-icon-hover uk-icon-google-plus uk-margin-small-right" href=""></a>
-            <a class="uk-icon-button uk-icon-hover uk-icon-pinterest-p uk-margin-small-right" href=""></a>
-            <a class="uk-icon-button uk-icon-hover uk-icon-instagram uk-margin-small-right" href=""></a>
+          <div class="uk-margin-bottom uk-container uk-text-center">
+            <a class="uk-icon-button uk-icon-facebook uk-margin-small-right" href="https://www.facebook.com/ElBraseroOficial/?fref=ts"></a>
+            <a class="uk-icon-button uk-icon-twitter uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-google-plus uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-pinterest-p uk-margin-small-right" href=""></a>
+            <a class="uk-icon-button uk-icon-instagram uk-margin-small-right" href=""></a>
           </div>
           <div class="uk-margin-bottom uk-container uk-text-slim">
             <p class="uk-text-muted uk-h2">
