--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </section>
 
 
-    <div class="uk-block">
+    <div class="eb-footer uk-block">
       <div class="uk-container uk-container-center" data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
         <div class="uk-flex uk-flex-space-around uk-flex-wrap">
           <div class="uk-margin-bottom uk-container uk-text-center">
