Nosotros page finished

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="eb-navbar uk-navbar uk-flex uk-flex-center" data-uk-sticky="{ showup: true, animation: 'uk-animation-slide-top', clsactive: 'eb-navbar-active' }">
       <ul class="uk-navbar-nav">
         <li class="uk-visible-small"><a href="#offcanvas" data-uk-offcanvas="{mode:'slide'}">menu</a></li>
-        <li class="uk-hidden-small uk-active"><a href="inicio.html">inicio</a></li>
+        <li class="uk-hidden-small uk-active"><a href="index.html">inicio</a></li>
         <li class="uk-hidden-small"><a href="nosotros.html">nosotros</a></li>
         <li class="uk-hidden-small"><a href="platos.html">platos</a></li>
         <li class="uk-hidden-small"><a href="contacto.html">contacto</a></li>
@@ -95,7 +95,7 @@
           </div>
           <div>
             <div class="border-yellow-top"></div>
-            <h2 class="uk-h1">Ensaladas</h2>
+            <h2 class="uk-h1">Pollos</h2>
             <img src="assets/images/home/img2.jpg" alt="">
             <div class="details uk-margin-top">
               <p>
@@ -109,7 +109,7 @@
           </div>
           <div>
             <div class="border-green-top"></div>
-            <h2 class="uk-h1">Frutas</h2>
+            <h2 class="uk-h1">Jugos</h2>
             <img src="assets/images/home/img3.jpg" alt="">
             <div class="details uk-margin-top">
               <p>
@@ -180,7 +180,7 @@
 
     <section class="uk-block uk-block-large uk-contrast uk-cover-background" style="background-image: url('assets/images/home/bg.jpg')">
       <div class="uk-container uk-container-center uk-text-center">
-        <h4 class="uk-heading-large text-krona">MEJORES<br>POSTRES</h4>
+        <h4 class="uk-heading-large text-krona">MEJORES<br>PLATOS</h4>
         <p class="uk-text-large">
           Ceplicaboserde miuas nerafae kertyerauas vitaesa eniptaiad esertyatya nemo
         </p>
