--- a/nosotros.html
+++ b/nosotros.html
@@ -33,7 +33,7 @@
     <nav class="eb-navbar uk-navbar uk-flex uk-flex-center" data-uk-sticky="{ showup: true, animation: 'uk-animation-slide-top', clsactive: 'eb-navbar-active' }">
       <ul class="uk-navbar-nav">
         <li class="uk-visible-small"><a href="#offcanvas" data-uk-offcanvas="{mode:'slide'}">menu</a></li>
-        <li class="uk-hidden-small uk-active"><a href="inicio.html">inicio</a></li>
+        <li class="uk-hidden-small uk-active"><a href="index.html">inicio</a></li>
         <li class="uk-hidden-small"><a href="nosotros.html">nosotros</a></li>
         <li class="uk-hidden-small"><a href="platos.html">platos</a></li>
         <li class="uk-hidden-small"><a href="contacto.html">contacto</a></li>
@@ -76,20 +76,108 @@
 
     <div class="uk-block">
       <div class="uk-container uk-container-center">
-        <div class="uk-grid uk-grid-width-medium-1-3">
+        <div class="uk-grid uk-grid-width-medium-1-3" data-uk-grid-margin>
           <div>
-            <h3 class="uk-h1 uk-text-slim">Nuestra Misión y Valores</h3>
+            <div class="border-red-top"></div>
+            <h3 class="uk-h1 uk-text-slim">Misión</h3>
             <p>
               Seius modi tempora incidunut labore et dolore.
             </p>
-            <p class="uk-text-muted">
+            <p class="uk-text-muted uk-text-slim">
               Fratione uptate mseesciun neque porroisqm estrem equia dolorer ntreterase geryiuyasa miertase.
             </p>
-            <ul class="uk-list">
-              <li><i class="uk-icon-check uk-icon-align-justify text-red"></i> Lorem ipsum dolor sit</li>
+            <ul class="uk-list uk-list-space uk-text-large uk-text-slim uk-text-muted">
+              <li><i class="uk-icon-check text-red"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-red"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-red"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-red"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-red"></i> Lorem ipsum dolor sit</li>
+            </ul>
+          </div>
+          <div>
+            <div class="border-yellow-top"></div>
+            <h3 class="uk-h1 uk-text-slim">Visión</h3>
+            <p>
+              Etiam eget auctor dui, quis feugiat leo.
+            </p>
+            <p class="uk-text-muted uk-text-slim">
+              Fratione uptate mseesciun neque porroisqm estrem equia dolorer ntreterase geryiuyasa miertase.
+            </p>
+            <ul class="uk-list uk-list-space uk-text-large uk-text-slim uk-text-muted">
+              <li><i class="uk-icon-check text-yellow"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-yellow"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-yellow"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-yellow"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-yellow"></i> Lorem ipsum dolor sit</li>
+            </ul>
+          </div>
+          <div>
+            <div class="border-green-top"></div>
+            <h3 class="uk-h1 uk-text-slim">Valores</h3>
+            <p>
+              Sed aliquam, justo ut pharetra dapibus.
+            </p>
+            <p class="uk-text-muted uk-text-slim">
+              Mdi tempora incidunt, ut labore et dolore magnam aliq uam quaerat voluptatem. ut enim ad minima veniam.
+            </p>
+            <ul class="uk-list uk-list-space uk-text-large uk-text-slim uk-text-muted">
+              <li><i class="uk-icon-check text-green"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-green"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-green"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-green"></i> Lorem ipsum dolor sit</li>
+              <li><i class="uk-icon-check text-green"></i> Lorem ipsum dolor sit</li>
             </ul>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="uk-block uk-block-muted">
+      <div class="uk-container uk-container-center uk-text-center">
+        <h2 class="uk-text-slim uk-h1 uk-margin-large">Nuestros Cocineros</h2>
+        <div class="uk-grid uk-grid-width-large-1-4 uk-grid-width-medium-1-2" data-uk-grid-margin>
+          <div data-uk-scrollspy="{ cls: 'uk-animation-slide-left' }">
+            <img class="uk-border-circle" src="assets/images/nosotros/teacher1.jpg" alt="">
+            <h3>Luchita</h3>
+            <p class="uk-text-muted uk-text-slim">
+              Ceaertrsa vaesar rafaes setyesqure m ipsum quia dolor.
+            </p>
+          </div>
+          <div data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
+            <img class="uk-border-circle" src="assets/images/nosotros/teacher2.jpg" alt="">
+            <h3>Luchito</h3>
+            <p class="uk-text-muted uk-text-slim">
+              Vsanamet, consect amodi tempora incidunt ut labore et.
+            </p>
+          </div>
+          <div data-uk-scrollspy="{ cls: 'uk-animation-slide-bottom' }">
+            <img class="uk-border-circle" src="assets/images/nosotros/teacher3.jpg" alt="">
+            <h3>Tiburcia</h3>
+            <p class="uk-text-muted uk-text-slim">
+              Consect amodi tempora incidunt, ut labore et dognam aliqu.
+            </p>
+          </div>
+          <div data-uk-scrollspy="{ cls: 'uk-animation-slide-right' }">
+            <img class="uk-border-circle" src="assets/images/nosotros/teacher4.jpg" alt="">
+            <h3>Jaimito</h3>
+            <p class="uk-text-muted uk-text-slim">
+              Quaerat voluptatem. ut enim ad mini ma veniam, quis nostrum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="uk-block uk-block-large uk-cover-background" style="background-image: url('assets/images/nosotros/testimonio-bg.jpg')">
+      <div class="uk-container uk-container-center uk-text-center uk-contrast">
+        <h2 class="uk-h1 uk-text-slim">Testimonios</h2>
+        <p class="uk-text-large uk-width-medium-4-5 uk-container-center">
+          “ Ceplicaboserde miuas nerafae kertyerauas vitaesa eniptaiad esertyatya nemo volernatur aut oditaut. Suspendisse potenti. Sed fermentum, libero eget euismod convallis, justo lectus egestas dui, eu tempor lectus risus a dolor. Suspendisse tempor quam sapien molestie nec...”
+        </p>
+        <p>
+          Patricio Pulgarcito, <br>
+          Cliente
+        </p>
       </div>
 
     </div>
