fix anchor on platos.html

--- a/platos.html
+++ b/platos.html
@@ -32,7 +32,7 @@
     <nav class="eb-navbar uk-navbar uk-flex uk-flex-center" data-uk-sticky="{ showup: true, animation: 'uk-animation-slide-top', clsactive: 'eb-navbar-active' }">
       <ul class="uk-navbar-nav">
         <li class="uk-visible-small"><a href="#offcanvas" data-uk-offcanvas="{mode:'slide'}">menu</a></li>
-        <li class="uk-hidden-small"><a href="inicio.html">inicio</a></li>
+        <li class="uk-hidden-small"><a href="index.html">inicio</a></li>
         <li class="uk-hidden-small"><a href="nosotros.html">nosotros</a></li>
         <li class="uk-hidden-small uk-active"><a href="platos.html">platos</a></li>
         <li class="uk-hidden-small"><a href="contacto.html">contacto</a></li>
