--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <p class="uk-text-slim">
                   Ceaertrsa vaesar rafaes setyeras ertyao lasec vasptai aoertayse squrem ipsum quia dolor. Vsanamet, consect amodi tempora incidunt.
                 </p>
-                <a href="#" class="button uk-button-large">MÁS</a>
+                <a href="platos.html" class="button uk-button-large">MÁS</a>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
                 <p class="uk-text-slim">
                   Daesarfaes setyera krscaertrsa aoertayse squrem ipsum quiertyaodeas laseceras vasptai a dolor. Vsanamet, consect di tempora miaser.
                 </p>
-                <a href="#" class="button uk-button-large">MÁS</a>
+                <a href="platos.html" class="button uk-button-large">MÁS</a>
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
         <p class="uk-text-large">
           Ceplicaboserde miuas nerafae kertyerauas vitaesa eniptaiad esertyatya nemo
         </p>
-        <a href="#" class="button button-transparent border-white uk-button-large">VER MÁS</a>
+        <a href="platos.html" class="button button-transparent border-white uk-button-large">VER MÁS</a>
       </div>
     </section>
 
